Altered Default Kit, Fixed Inventory Sizes